[package]
name = "test_bevy_3d"
version = "0.1.2"
edition = "2024"

[dependencies]
bevy = {version = "0.15.3", features = ["mp3", "wav"]}
bevy_rapier2d = "0.29.0"
bevy_egui = "0.33.0"
bevy-inspector-egui = "0.30.0"
rapier2d = "0.23.1"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clipboard = "0.5.0"
regex = "1.11.1"